# Yarock

./: .directory  CHANGES  CMakeLists.txt  README  yarock.qrc
data/: yarock.desktop
data/lyrics/: ultimate_providers.xml
icon/systray_icon/: README.txt
images/: .directory
src/: CMakeLists.txt  commandlineoptions.cpp  commandlineoptions.h  constants.h  debug.cpp  debug.h  global_actions.cpp  global_actions.h  global_shortcuts.cpp  global_shortcuts.h  main.cpp  mainwindow.cpp  mainwindow.h  networkaccess.cpp  networkaccess.h  settings.cpp  settings.h  threadmanager.cpp  threadmanager.h  utilities.cpp  utilities.h  views.h
src/core/database/: database.cpp  database.h  databasebuilder.cpp  databasebuilder.h  databasemanager.cpp  databasemanager.h
src/core/history/: histomanager.cpp  histomanager.h
src/core/mediaitem/: mediaitem.cpp  mediaitem.h  mediaitem_replaygain.cpp  mediaitem_statistic.cpp  mediamimedata.cpp  mediamimedata.h  playlist_parser.cpp  playlist_parser.h  shareddata.h
src/core/mediasearch/: media_search.cpp  media_search.h  media_search_dialog.cpp  media_search_dialog.h  media_search_engine.cpp  media_search_engine.h  search_query.cpp  search_query.h  search_query_widget.cpp  search_query_widget.h
src/core/player/: engine.cpp  engine.h  engine_base.cpp  engine_base.h  engine_phonon.cpp  engine_phonon.h  engine_vlc.cpp  engine_vlc.h
src/core/player/vlc/: vlc_lib.cpp  vlc_lib.h  vlc_media.cpp  vlc_media.h
src/covers/: .directory  covercache.cpp  covercache.h  covertask.cpp  covertask.h
src/dbus/: dbusnotification.cpp  dbusnotification.h  mpris2.cpp  mpris2.h  mpris_manager.cpp  mpris_manager.h
src/infosystem/: info_system.cpp  info_system.h  info_system_worker.cpp
src/infosystem/services/: service_discogs.cpp  service_discogs.h  service_echonest.cpp  service_echonest.h  service_lastfm.cpp  service_lastfm.h  service_lyrics.cpp  service_lyrics.h  service_musicbrainz.cpp  service_musicbrainz.h  ultimatelyricsprovider.cpp  ultimatelyricsprovider.h  ultimatelyricsreader.cpp  ultimatelyricsreader.h
src/models/filesystem/: file_model.cpp  file_model.h
src/models/local/: histo_model.cpp  histo_model.h  local_playlist_model.cpp  local_playlist_model.h  local_playlist_populator.cpp  local_playlist_populator.h  local_track_model.cpp  local_track_model.h  local_track_populator.cpp  local_track_populator.h
src/models/stream/: service_base.cpp  service_base.h  service_dirble.cpp  service_dirble.h  service_shoutcast.cpp  service_shoutcast.h  service_tunein.cpp  service_tunein.h  service_xspf.cpp  service_xspf.h  stream_model.cpp  stream_model.h
src/online/: lastfm.cpp  lastfm.h
src/playqueue/: playlistdbwriter.cpp  playlistdbwriter.h  playlisteditor.cpp  playlisteditor.h  playlistpopulator.cpp  playlistpopulator.h  playlistview.cpp  playlistview.h  playlistwidget.cpp  playlistwidget.h  playlistwriter.cpp  playlistwriter.h  playqueue_base.cpp  playqueue_base.h  playqueue_model.cpp  playqueue_model.h  playqueue_proxymodel.cpp  playqueue_proxymodel.h  task_manager.cpp  task_manager.h  virtual_playqueue.cpp  virtual_playqueue.h
src/smartplaylist/: smartplaylist.cpp  smartplaylist.h
src/views/: bottom_container.cpp  bottom_container.h  browser_view.cpp  browser_view.h  item_button.cpp  item_button.h  item_common.cpp  item_common.h  item_menu.cpp  item_menu.h  scene_base.cpp  scene_base.h
src/views/about/: about_scene.cpp  about_scene.h
src/views/context/: context_item.cpp  context_item.h  context_scene.cpp  context_scene.h  context_widget.cpp  context_widget.h  lyricseditor.cpp  lyricseditor.h
src/views/filesystem/: file_graphicitem.cpp  file_graphicitem.h  file_scene.cpp  file_scene.h
src/views/local/: local_item.cpp  local_item.h  local_scene.cpp  local_scene.h  local_scene_dashboard.cpp  local_scene_playing.cpp  local_scene_playqueue.cpp  local_scene_rate.cpp  qpixmapfilter.cpp  qpixmapfilter.h
src/views/settings/: settings_scene.cpp  settings_scene.h  settings_widget.cpp  settings_widget.h
src/views/stream/: stream_item.cpp  stream_item.h  stream_loader.cpp  stream_loader.h  stream_scene.cpp  stream_scene.h
src/widgets/: audiocontrols.cpp  audiocontrols.h  customsplitter.cpp  customsplitter.h  exlineedit.cpp  exlineedit.h  minimalwidget.cpp  minimalwidget.h  playertoolbar.cpp  playertoolbar.h  ratingwidget.cpp  ratingwidget.h  seekslider.cpp  seekslider.h  sort_widget.cpp  sort_widget.h  spacer.cpp  spacer.h  splittercollapser.cpp  splittercollapser.h  statuswidget.cpp  statuswidget.h
src/widgets/dialogs/: addstreamdialog.cpp  addstreamdialog.h  dboperationdialog.cpp  dboperationdialog.h  filedialog.cpp  filedialog.h  mediaitem_edit_dialog.cpp  mediaitem_edit_dialog.h  shortcutdialog.cpp  shortcutdialog.h
src/widgets/equalizer/: equalizer_dialog.cpp  equalizer_dialog.h  equalizer_preset.cpp  equalizer_preset.h  equalizer_slider.cpp  equalizer_slider.h
src/widgets/main/: centraltoolbar.cpp  centraltoolbar.h  centralwidget.cpp  centralwidget.h  maintoolbutton.cpp  maintoolbutton.h  menubar.cpp  menubar.h  menumodel.cpp  menumodel.h  menuview.cpp  menuview.h  menuwidget.cpp  menuwidget.h
src/widgets/nowplaying/: nowplayingview.cpp  nowplayingview.h
src/widgets/popupcompleter/: popup_item.cpp  popup_item.h  popup_model.cpp  popup_model.h  popup_view.cpp  popup_view.h  search_popup.cpp  search_popup.h
src3party/qxt/: CMakeLists.txt
translation/: yarock_fr.ts
